src/test/ui/parser/underscore_static.stderr
error: expected identifier, found reserved identifier `_`
  --> $DIR/underscore_static.rs:1:8
   |
LL | static _: () = ();
   |        ^ expected identifier, found reserved identifier

error: aborting due to previous error

