src/test/ui/parser/underscore_static.rs
static _: () = (); //~ ERROR expected identifier, found reserved identifier `_`

fn main() {}
